# rerb-regularity-realtime

./: .env.example  .gitignore  README.md  docker-compose.yml  horaires.py  horaires_ligne_b.py  horaires_theoriques_20260326_073635.csv  horaires_theoriques_20260326_074325.csv  modele_dataframe.csv  postgres.sql  pyproject.toml  pytest.ini  start.sh
.github/workflows/: ci.yml
dags/: pipeline_dag.py  reset_dag.py
data/processed/: detail_ecarts_horaires_20260414_0159.csv  detail_ecarts_horaires_20260415_0550.csv  detail_ecarts_horaires_20260415_0759.csv  detail_ecarts_horaires_20260416_0101.csv  detail_ecarts_horaires_20260417_0705.csv  detail_ecarts_horaires_20260418_0859.csv  fichiers_charges_20260414_0159.csv  fichiers_charges_20260415_0550.csv  fichiers_charges_20260415_0759.csv  fichiers_charges_20260416_0101.csv  fichiers_charges_20260417_0705.csv  fichiers_charges_20260418_0859.csv  hist_ecart_horaire_20260414_0159.csv  hist_ecart_horaire_20260415_0550.csv  hist_ecart_horaire_20260415_0759.csv  hist_ecart_horaire_20260416_0101.csv  hist_ecart_horaire_20260417_0705.csv  (+60 more)
docker/: Dockerfile.api  Dockerfile.cron  Dockerfile.streamlit  crontab  prometheus.yml
documents/: emplacement-des-gares-idf.csv  emplacement-des-gares-idf.ods  liste_arrets_ordonnee.csv
postgres-init/: create_airflow_db.sql
src/: calcul_allongement_parcours.py  calcul_ecarts_horaires.py  calcul_regularite.py  creation_table_ref.py  extract_horaires.py  load_postgres.py  reset_postgres.py
src/api/: app.py  (+2 more)
tests/: conftest.py  test_api.py  test_extract_horaires.py  test_load_postgres.py
(+85 files in other folders)
